<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainFec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/widget_margin"
        android:background="#270080"
        android:contentDescription="@string/date_str"
        android:padding="12dp"
        android:text="@string/date_str"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/widget_margin"
        android:background="#ffffff"
        android:contentDescription="@string/routine_name"
        android:gravity="center"
        android:text="@string/n_a"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"/>

</LinearLayout>